# led-control-service

./: CMakeLists.txt  LICENSE  README.md  install.sh  requirements.md
config/: leds.ini
src/: client.cpp  client.py  gpio_manager.cpp  gpio_manager.h  ledctl.py  nodes.h  parser.cpp  parser.h  service.cpp
systemd/: led-control.service
